Fix split list items overflowing in the other column

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -468,6 +468,7 @@ $list-status-icon-height: $default-icon-size;
         columns: 2;
 
         .p-list__item {
+          display: inline-block;
           width: 100%;
         }
       }
